add user request model and api
